hphp/hack/test/typecheck/suspend_operator_err17.php.exp
File "suspend_operator_err17.php", line 13, characters 11-14:
Coroutine calls are only allowed when they are arguments to 'suspend' operator (Typing[4171])
